--- a/webscraping/02_BeautifulSoup_Important_Methods.ipynb
+++ b/webscraping/02_BeautifulSoup_Important_Methods.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "61ae3353",
    "metadata": {},
    "outputs": [
@@ -29,6 +29,7 @@
      "output_type": "stream",
      "text": [
       "This is an introductory paragraph.\n",
+      "[<p class=\"intro\">This is an introductory paragraph.</p>, <p>This is another paragraph.</p>]\n",
       "This is an introductory paragraph.\n",
       "This is another paragraph.\n"
      ]
@@ -57,6 +58,7 @@
     "\n",
     "# Find all <p> tags\n",
     "all_paragraphs = soup.find_all('p')\n",
+    "print(all_paragraphs)\n",
     "for p in all_paragraphs:\n",
     "    print(p.text)\n",
     "# Output:\n",
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ed93d677",
    "metadata": {},
    "outputs": [
@@ -431,7 +433,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "webscrape",
    "language": "python",
    "name": "python3"
   },
@@ -445,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
